--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,73 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Cinzel&family=Roboto&display=swap');
+*{
+    padding: 0;
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.header{
+    display: flex;
+    /* justify-content: center;*/
+    align-items: center;
+    width: 100%;
+    height: 60px;
+    background: white;
+    box-shadow: 4px 4px 5px rgb(189, 189, 189);
+    
 }
+.header h2{
+    font-size: 1.6em;
+    font-weight: 400;
+    margin-left: 1.5em;
+    color: black;
+    /* color: white; */
+}
+.container{
+    display: flex;
+    width: 100%;
+    /* border: 2px solid black; */
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
+.main{
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    width: 400px;
+    background-color: rgb(255, 255, 255);
+    /* border: 2px solid black; */
+    box-shadow: 6px 6px 8px grey;
+    margin-top: 6em;
+    margin-left: 1em;
+    margin-right: 1em;
+}
+.image{
+    width: 100%;
+    margin: 0;
+}
+.image img{
+    width:400px;
+  height:300px;
+  object-fit:cover;
+  margin: 0px;
+}
+.lower{
+    justify-content: center;
+    align-items: center;
+    padding: 1.5em;
+}
+.title{
+    display: flex;
+    text-align:center;
+}
+.author{
+    display: flex;
+    flex-direction: column;
+  
+}
+.title h2{
+    border-bottom: 1px solid rgb(238, 238, 238);
+    padding-bottom: 1em;
+}
+
